2008-06-24 [colin]	3.4.0cvs108

	* src/messageview.c
		Fix Spam button sensitivity in newsgroups

2008-06-23 [wwp]	3.4.0cvs107

	* po/fr.po
		Updated French translation.

2008-06-23 [mones]	3.4.0cvs106

	* po/es.po
		Updated translation for release

2008-06-22 [mones]	3.4.0cvs105

	* manual/es/plugins.xml
		Synced new entry for Mail Archiver plugin

2008-06-22 [colin]	3.4.0cvs104

	* src/compose.c
		Fix initial cursor position

2008-06-21 [paul]	3.4.0cvs103

	* manual/plugins.xml
		add an entry for the new Mail Archiver plugin

2008-06-21 [paul]	3.4.0cvs102

	* src/gtk/about.c
		we're in 'string freeze', put back the
		< > symbols for now

2008-06-21 [paul]	3.4.0cvs101

	* manual/advanced.xml
	* manual/es/advanced.xml
		fix build warning: <emphasis> cannot be contained
		within <filename>
	* src/gtk/about.c
		fix non-clickable link on License page and drop
		the containing < > symbols to match other links

2008-06-20 [mones]	3.4.0cvs100

	* manual/advanced.xml
		Added autofaces documentation, note about clawsker in hidden
		preferences, minor markup fix. Thanks Paul for proofreading
	* manual/es/advanced.xml
		Synchronised Spanish manual

2008-06-16 [colin]	3.4.0cvs99

	* src/compose.c
		Fix cursor placing on signature change

2008-06-16 [paul]	3.4.0cvs98

	* src/imap_gtk.c
	* src/mh_gtk.c
	* src/gtk/inputdialog.c
		really fussy coding style fixes

2008-06-16 [paul]	3.4.0cvs97

	* src/Makefile.am
		keep the alphabetical order

2008-06-13 [mones]	3.4.0cvs96

	* src/autofaces.c
		Fix crasher ;-)
	* src/prefs_filtering_action.c
		Fixed cosmetic bug, processing also displays "Filtering"

2008-06-13 [mones]	3.4.0cvs95

	* src/Makefile.am
	* src/autofaces.c	** NEW FILE **	
	* src/autofaces.h	** NEW FILE **
	* src/compose.c
		Allow setting Faces and X-Faces globally and per-account
		from configuration files under ~/.claws-mail/autofaces

2008-06-13 [holger]	3.4.0cvs94

	* .cvsignore
		More files to ignore
	* src/gtk/inputdialog.c
	* src/gtk/inputdialog.h