@@ -3404,3 +3404,4 @@
 ( cvs diff -u -r 1.60.2.52 -r 1.60.2.53 po/es.po;  ) > 3.4.0cvs106.patchset
 ( cvs diff -u -r 1.42.2.39 -r 1.42.2.40 po/fr.po;  ) > 3.4.0cvs107.patchset
 ( cvs diff -u -r 1.94.2.180 -r 1.94.2.181 src/messageview.c;  ) > 3.4.0cvs108.patchset
+( cvs diff -u -r 1.395.2.370 -r 1.395.2.371 src/summaryview.c;  ) > 3.4.0cvs109.patchset
